tests/invalid/assign_to_array_ptr.lang
func main() {
    var arr: [1]i32;
    arr.ptr = null;
}
